2025-05-18

- Fixed: Changed name of OruxMaps icon 1015 to "Keep Left"
  in file GPX-OruxMaps-to-QMapShack.en
- Fixed: Added missing OruxMaps icon 1008 "Continue"
  to file GPX-OruxMaps-to-QMapShack.en

2025-03-05

- Fixed: Underline link to GitHub repository was missing
- Fixed: Selection in file selection window was not highlighted (Linux only!) 

2025-02-20

- Increased conversion speed significantly
- Activated link to GitHub repository

2025-02-19

- Fixed: German locale was not recognized

2025-02-19

- Initial version
